# fastapi-fraud-check-microservice

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py  schemas.py  services.py
app/ml_models/fraud_check_model/: scaler.joblib
app/utils/: error_handlers.py  security.py
notebooks/: fraud_model_method_evaluation.ipynb  fraud_model_training.ipynb  fraud_model_training_improved.ipynb
scripts/: generate_hmac_signature.py  train_fraud_model.py
tests/: conftest.py
tests/test_api/: conftest.py  test_fraud_api.py
tests/test_services/: conftest.py  test_fraud_service.py
